test/scc/expr/semantic-errors/121.t
void test()
{
    struct
    {
        int x, y;
    } a = { 0, 1, 2 };
}